--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -7,7 +7,7 @@
     <title>YelpCamp</title>
     <!-- <link rel="shortcut icon" href="/favicon.png" /> -->
     <!-- <link rel="icon" type="image/png" href="/favicon.png" /> -->
-    <link rel="shortcut icon" href="/layouts/favicon.png" />
+    <link rel="shortcut icon" href="/stylesheets/favicon.png" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css"
