--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -5,9 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>YelpCamp</title>
-    <!-- <link rel="shortcut icon" href="/favicon.png" /> -->
-    <!-- <link rel="icon" type="image/png" href="/favicon.png" /> -->
-    <link rel="shortcut icon" href="/stylesheets/favicon.png" />
+    <link rel="shortcut icon" href="favicon.png" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css"
