--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>YelpCamp</title>
+    <title>CampApp</title>
     <link rel="icon" href="favicon.png" />
     <link
       rel="stylesheet"
@@ -18,7 +18,7 @@
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
       <header class="mb-auto">
         <div>
-          <h3 class="float-md-left mb-0">YelpCamp</h3>
+          <h3 class="float-md-left mb-0">CampApp</h3>
           <nav class="nav nav-masthead justify-content-center float-md-right">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
             <a class="nav-link" href="/campgrounds">Campgrounds</a>
@@ -32,9 +32,9 @@
         </div>
       </header>
       <main class="px-3">
-        <h1>YelpCamp</h1>
+        <h1>CampApp</h1>
         <p class="lead">
-          Welcome to YelpCamp! <br />
+          Welcome to CampApp! <br />
           Jump right in and explore our many campgrounds. <br />
           Feel free to share some of your own and comment on others!
         </p>
